--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,14 @@
 		</nav>
 
     <script src="js/tabs.js"></script>
-    <script src="js/monitor.js"></script>
+	<script src="js/monitor.js"></script>
+	<script>
+		const {ipcRenderer} = require('electron');
+
+		ipcRenderer.on('settings:get', (event, settings) => {
+			document.getElementById('cpu-overload').value = settings.cpuOverload;
+			document.getElementById('alert-frequency').value = settings.alertFrequency;
+		})
+	</script>
   </body>
 </html>
