use settings data in the monitor

--- a/app/index.html
+++ b/app/index.html
@@ -68,12 +68,39 @@
     <script src="js/tabs.js"></script>
 	<script src="js/monitor.js"></script>
 	<script>
-		const {ipcRenderer} = require('electron');
+		// const {ipcRenderer} = require('electron');
+		const settingsForm = document.getElementById('settings-form');
 
+		// get settings
 		ipcRenderer.on('settings:get', (event, settings) => {
 			document.getElementById('cpu-overload').value = settings.cpuOverload;
 			document.getElementById('alert-frequency').value = settings.alertFrequency;
+		});
+
+		//submit settings
+		settingsForm.addEventListener('submit', e => {
+			e.preventDefault();
+			const cpuOverload = document.getElementById('cpu-overload').value;
+			const alertFrequency = document.getElementById('alert-frequency').value;
+
+			// send new settings to main process
+			ipcRenderer.send('settings:set', {
+				cpuOverload,
+				alertFrequency
+			})
+
+			showAlert('settings saved');
 		})
+
+		//show alert for settings
+		function showAlert(msg){
+			const alert = document.getElementById('alert');
+			alert.classList.remove('hide');
+			alert.classList.add('alert');
+			alert.innerText = msg;
+
+			setTimeout(() => alert.classList.add('hide'), 3000);
+		}
 	</script>
   </body>
 </html>
